# kb

./: .gitignore  ARCHITECTURE.md  SUBMISSION.md  TESTING.md  package.json  pnpm-lock.yaml  turbo.json
apps/kompany/: next.config.ts  package.json  tsconfig.json
apps/kompany/agent/: instructions.md  instrumentation.ts
apps/kompany/agent/channels/: eve.ts  slack.ts
apps/kompany/agent/connections/: lightrag.ts  linear.ts
apps/kompany/agent/instructions/: memory.ts
apps/kompany/agent/lib/: lightrag-client.ts  logger.ts
apps/kompany/agent/schedules/: ingest_linear.ts
apps/kompany/agent/tools/: ingest_event.ts  query.ts  query_brain.ts  scrape_and_ingest.ts
apps/kompany/app/: globals.css  layout.tsx  page.tsx
apps/kompany/app/_components/: graph-view.tsx
apps/kompany/app/_data/: seed-docs.ts
apps/kompany/app/api/graph/: route.ts
apps/lightrag/: .env.example  main.py  package.json  pyproject.toml
apps/lightrag/api/: routes.py  schemas.py
apps/lightrag/core/: config.py
docs/: 00-introduction.md  01-the-philosophy.md  02-the-company-model.md  03-events-and-observation.md  04-memory.md  05-reasoning.md  06-organizational-beliefs.md  07-skills.md  08-agents.md  09-runtime.md  12-graph-rag-engine.md  13-lightrag-setup-guide.md  14-lightrag-api-contract.md  research-synthesis.md
docs/papers/: computational-organizations.md  institutional-memory.md
docs/studio/: about.md  benefits.md  clients.md  onboarding.md  operations.md  products.md  projects.md  team.md  tech_stack.md
